Adjust size of rosters to avoid wrapping on a long name

--- a/client/css/ld2l.less
+++ b/client/css/ld2l.less
@@ -291,10 +291,10 @@ div.ld2l-menu-item {
 
 // Player name only quick cards
 div.ld2l-player {
-	padding: 2px;
+	padding: 0.125em;
 
 	img {
-		padding-right: 3px;
+		padding-right: 0.25em;
 		vertical-align: middle;
 		height: 32px;
 	}
@@ -306,7 +306,7 @@ div.ld2l-player {
 
 // Lobby management page
 div.ld2l-lobby-player {
-	padding: 4px;
+	padding: 0.25em;
 	input[type="radio"] {
 		margin-left: 1em;
 		margin-right: 1em;
@@ -315,7 +315,7 @@ div.ld2l-lobby-player {
 
 .ld2l-lobby-side {
 	display: inline-block;
-	width: 20em;
+	width: 22em;
 	vertical-align: top;
 }
 
